cabal-version:      3.0

name:               todo-hs
version:            0.1.0
synopsis:           todo cli in haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ahmed Hagi
maintainer:         ahmedosman@mac.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Todo.Types
                    , Todo.Parser
                    , Todo.Actions
                    , Todo.Util
    build-depends:    base ^>=4.17.2.1,
                      optparse-applicative,
                      strict,
                      bytestring,
                      text,
                      aeson,
                      yaml,
                      time,
                      listsafe,
                      MissingH,
                      directory,
    hs-source-dirs:   src
    default-language: Haskell2010

executable todo-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      todo-hs,
                      optparse-applicative,
                      directory,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite todo-hs-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.17.2.1,
                      todo-hs,
                      hspec,
                      QuickCheck,
                      time,
                      random,
    default-language: Haskell2010
